--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,11 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+DB_TESTING_HOST=127.0.0.1
+DB_TESTING_DATABASE=testing_db
+DB_TESTING_USERNAME=root
+DB_TESTING_PASSWORD=secret
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
