--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.3.1",
         "browser-sync": "^2.26.3",
         "browser-sync-webpack-plugin": "2.0.1",
-        "bulma": "^0.7.2",
+        "bulma": "^0.7.4",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
-        "popper.js": "^1.14.5",
-        "vue": "^2.5.7"
+        "popper.js": "^1.14.7",
+        "vue": "^2.6.7"
+    },
+    "dependencies": {
+        "npm": "^6.8.0"
     }
 }
