--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^0.19",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.0.1",
+        "buefy": "^0.8.13",
         "bulma": "^0.8.1",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.4",
