--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
         "axios": "^0.19",
-        "browser-sync": "^2.26.7",
+        "browser-sync": "^2.26.12",
         "browser-sync-webpack-plugin": "^2.0.1",
         "bulma": "^0.8.1",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.4",
-        "lodash": "^4.17.13",
+        "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
@@ -25,5 +25,8 @@
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10",
         "vuelidate": "^0.7.5"
+    },
+    "dependencies": {
+        "yargs-parser": "^18.1.3"
     }
 }
