--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "buefy": "^0.9.3",
         "bulma": "^0.8.1",
         "cross-env": "^7.0",
+        "dayjs": "^1.8.36",
         "laravel-mix": "^5.0.5",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
