--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "dayjs": "^1.9.7",
         "laravel-mix": "^5.0.9",
         "lodash": "^4.17.20",
+        "numeral": "^2.0.6",
         "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.30.0",
