--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "sass": "^1.30.0",
         "sass-loader": "^8.0.0",
         "vue": "^2.6.12",
+        "vue-router": "^3.4.9",
         "vue-template-compiler": "^2.6.12",
         "vuelidate": "^0.7.6"
     },
