--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,10 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
+# SESSION_DOMAIN=.localhost:3000
 SESSION_LIFETIME=120
+
+# SANCTUM_STATEFUL_DOMAINS=localhost:3000
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
