--- a/package.json
+++ b/package.json
@@ -2,33 +2,34 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "mix --production"
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
-        "axios": "^0.19",
-        "browser-sync": "^2.26.13",
-        "browser-sync-webpack-plugin": "^2.2.2",
+        "axios": "^0.24.0",
         "buefy": "^0.9.4",
         "bulma": "^0.8.2",
         "cross-env": "^7.0.3",
         "dayjs": "^1.9.7",
-        "laravel-mix": "^5.0.9",
+        "laravel-mix": "^6.0.39",
         "lodash": "^4.17.20",
         "numeral": "^2.0.6",
         "popper.js": "^1.12",
+        "postcss": "^8.3.11",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.30.0",
         "sass-loader": "^8.0.0",
         "vue": "^2.6.12",
+        "vue-loader": "^15.9.8",
         "vue-router": "^3.4.9",
         "vue-template-compiler": "^2.6.12",
-        "vuelidate": "^0.7.6"
+        "vuelidate": "^0.7.6",
+        "webpack": "^5.64.2"
     },
     "dependencies": {
         "yargs-parser": "^18.1.3"
