Converting components and pages to Inertia/Vue3. Forum, Login, and Register still need work.

--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
+        "@inertiajs/inertia": "^0.10.1",
+        "@inertiajs/inertia-vue3": "^0.5.2",
+        "@vue/compiler-sfc": "^3.2.22",
+        "@vuelidate/core": "^2.0.0-alpha.32",
+        "@vuelidate/validators": "^2.0.0-alpha.25",
         "axios": "^0.24.0",
+        "browser-sync": "^2.27.7",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "buefy": "^0.9.4",
         "bulma": "^0.8.2",
         "cross-env": "^7.0.3",
         "dayjs": "^1.9.7",
         "laravel-mix": "^6.0.39",
+        "laravel-mix-svg-vue": "^0.4.1",
         "lodash": "^4.17.20",
         "numeral": "^2.0.6",
         "popper.js": "^1.12",
@@ -24,11 +32,8 @@
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.30.0",
         "sass-loader": "^8.0.0",
-        "vue": "^2.6.12",
-        "vue-loader": "^15.9.8",
-        "vue-router": "^3.4.9",
-        "vue-template-compiler": "^2.6.12",
-        "vuelidate": "^0.7.6",
+        "vue": "^3.2.22",
+        "vue-loader": "^16.8.3",
         "webpack": "^5.64.2"
     },
     "dependencies": {
