--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.3",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^2.0",
+        "inertiajs/inertia-laravel": "^0.4.5",
         "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.0",
@@ -18,7 +19,7 @@
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
-        "fzaninotto/faker": "^1.9.1",
+        "fakerphp/faker": "^1.16",
         "laravel/sail": "^1.12",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^5.0",
