--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,15 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^2.0",
         "inertiajs/inertia-laravel": "^0.4.5",
         "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.0"
+        "laravel/ui": "^3.0",
+        "tightenco/ziggy": "^1.4"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
