--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
         "@fortawesome/fontawesome-free": "^5.15.1",
         "@inertiajs/inertia": "^0.10.1",
         "@inertiajs/inertia-vue3": "^0.5.2",
+        "@oruga-ui/oruga-next": "^0.4.8",
+        "@oruga-ui/theme-bulma": "^0.1.5",
         "@vue/compiler-sfc": "^3.2.22",
         "@vuelidate/core": "^2.0.0-alpha.32",
         "@vuelidate/validators": "^2.0.0-alpha.25",
         "axios": "^0.24.0",
         "browser-sync": "^2.27.7",
         "browser-sync-webpack-plugin": "^2.3.0",
-        "buefy": "^0.9.4",
         "bulma": "^0.8.2",
         "cross-env": "^7.0.3",
         "dayjs": "^1.9.7",
