--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "require-dev": {
         "facade/ignition": "^2.3.6",
         "fakerphp/faker": "^1.16",
+        "laravel/breeze": "^1.6",
         "laravel/sail": "^1.12",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^5.0",
