Registration still not working, even after Breeze scaffolding.

--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
-        "@inertiajs/inertia": "^0.10.1",
-        "@inertiajs/inertia-vue3": "^0.5.2",
+        "@inertiajs/inertia": "^0.10.0",
+        "@inertiajs/inertia-vue3": "^0.5.1",
+        "@inertiajs/progress": "^0.2.6",
         "@oruga-ui/oruga-next": "^0.4.8",
         "@oruga-ui/theme-bulma": "^0.1.5",
-        "@vue/compiler-sfc": "^3.2.22",
+        "@vue/compiler-sfc": "^3.0.5",
         "@vuelidate/core": "^2.0.0-alpha.32",
         "@vuelidate/validators": "^2.0.0-alpha.25",
         "axios": "^0.24.0",
@@ -29,7 +30,6 @@
         "lodash": "^4.17.20",
         "numeral": "^2.0.6",
         "popper.js": "^1.12",
-        "postcss": "^8.3.11",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.30.0",
         "sass-loader": "^8.0.0",
