Authentication, registration, login, verification working properly. Publish email templates to change later.

--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,8 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_DATABASE=jeepmeet
+DB_USERNAME=sail
 DB_PASSWORD=secret
 
 DB_TESTING_HOST=127.0.0.1
@@ -33,13 +33,22 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=jeepmeetup@gmail.com
-MAIL_PASSWORD=
-MAIL_ENCRYPTION=tls
+MAIL_HOST=mailhog
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=jeepmeet@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
+
+# MAIL_DRIVER=smtp
+# MAIL_HOST=smtp.gmail.com
+# MAIL_PORT=587
+# MAIL_USERNAME=jeepmeetup@gmail.com
+# MAIL_PASSWORD=
+# MAIL_ENCRYPTION=tls
+# MAIL_FROM_ADDRESS=jeepmeet@gmail.com
+# MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
