--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.3|^8.0",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^7.4",
         "inertiajs/inertia-laravel": "^0.4.3",
         "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.8",
